tests/apigateway/ctrl-apigw-01/01-global-kpc-endpoint-mandatory.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: KropathConfig
metadata:
  name: baseline
  namespace: kro-system
spec:
  mandatory:
    apigateway:
      endpointType: REGIONAL
