tests/apigateway/ctrl-apigw-01/02-apigatewayconfig.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: ApiGatewayConfig
metadata:
  name: general-policy
  namespace: payments-prod
spec: {}
