tests/apigateway/ctrl-apigw-01/06-apigatewayconfig-tls-and-endpoint.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: APIGatewayConfig
metadata:
  name: general-policy
  namespace: payments-prod
spec:
  mandatory:
    minimumTlsVersion: TLS_1_2
    disableExecuteApiEndpoint: true
