tests/apigateway/ctrl-apigw-01/08-global-kpc-tags.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: KropathConfig
metadata:
  name: baseline
  namespace: kro-system
spec:
  mandatory:
    tags:
      cost-centre: infra
