tests/apigateway/ctrl-apigw-01/11-apigatewayconfig-synced-labels.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: ApiGatewayConfig
metadata:
  name: general-policy
  namespace: payments-prod
spec:
  mandatory:
    syncedLabels:
      data-class: internal
