tests/apigateway/ctrl-apigw-01/03-assert-ac7.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: APIGatewayConfig
metadata:
  name: general-policy
  namespace: payments-prod
status:
  effectiveConfig:
    mandatory:
      endpointType: REGIONAL
