tests/apigateway/ctrl-apigw-01/05-assert-ac8.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: APIGatewayConfig
metadata:
  name: general-policy
  namespace: payments-prod
status:
  effectiveConfig:
    defaults:
      endpointType: REGIONAL
      apiKeySource: HEADER
      namingTemplate: "{namespace}-{name}"
