tests/apigateway/ctrl-apigw-01/10-assert-ac10.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: APIGatewayConfig
metadata:
  name: general-policy
  namespace: payments-prod
status:
  effectiveConfig:
    mandatory:
      tags:
        cost-centre: infra
        api-type: rest
    defaults:
      tags:
        team: platform
