tests/apigateway/ctrl-apigw-01/12-assert-ac11.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: APIGatewayConfig
metadata:
  name: general-policy
  namespace: payments-prod
status:
  effectiveConfig:
    mandatory:
      syncedLabels:
        data-class: internal
